--- a/plugin.xml
+++ b/plugin.xml
@@ -27,8 +27,8 @@
     <js-module src="www/TransistorAuthorizationToken.js" name="TransistorAuthorizationToken"></js-module>
 
     <platform name="ios">
-        <hook type="before_prepare" src="hooks/adjust_podfile.js" />
-        <hook type="after_prepare" src="hooks/pod_install.js" />
+        <hook type="after_plugin_install" src="hooks/adjust_podfile.js" />
+        <!-- <hook type="after_prepare" src="hooks/pod_install.js" /> -->
 
         <preference name="BACKGROUND_MODE_LOCATION" default="&lt;string&gt;location&lt;/string&gt;" />
 
